--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="en"><head><meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://code.jquery.com https://unpkg.com https://d3js.org https://threejs.org https://cdn.plot.ly https://stackpath.bootstrapcdn.com https://maps.googleapis.com https://cdn.tailwindcss.com https://ajax.googleapis.com https://kit.fontawesome.com https://cdn.datatables.net https://maxcdn.bootstrapcdn.com https://code.highcharts.com https://tako-static-assets-production.s3.amazonaws.com https://www.youtube.com https://fonts.googleapis.com https://fonts.gstatic.com https://pfst.cf2.poecdn.net https://puc.poecdn.net https://i.imgur.com https://wikimedia.org https://*.icons8.com https://*.giphy.com https://picsum.photos https://images.unsplash.com; frame-src 'self' https://www.youtube.com https://trytako.com; child-src 'self'; manifest-src 'self'; worker-src 'self'; upgrade-insecure-requests; block-all-mixed-content;">
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Invitation</title>
@@ -69,33 +71,35 @@
 <body>
     <div class="container">
         <h2 id="invitationTitle">Can we grab some coffee or go outside?</h2>
-        <button class="yes" onclick="handleYes()">Yes</button>
-        <button class="sorry" id="sorryButton" onclick="handleSorry()">Sorry</button>
+        <form action="https://formspree.io/f/xgvojqkw" method="POST" id="coffeeForm">
+            <button type="button" class="yes" onclick="handleYes()">Yes</button>
+            <button type="button" class="sorry" id="sorryButton" onclick="handleSorry()">Sorry</button>
 
-        <div id="dateField" class="hidden">
-            <input type="date" id="dateInput" required="">
-            <button onclick="showChoices()">Next</button>
-        </div>
+            <div id="dateField" class="hidden">
+                <input type="date" id="dateInput" name="date" required>
+                <button type="button" onclick="showChoices()">Next</button>
+            </div>
 
-        <div id="choices" class="hidden">
-            <h3>Where would you like to go?</h3>
-            <select id="locationSelect" onchange="toggleOtherField()">
-                <option value="Ronac Museum">Ronac Museum</option>
-                <option value="Rockwell">Rockwell</option>
-                <option value="San Juan Coffee Shop">San Juan Coffee Shop</option>
-                <option value="Other">Other</option>
-            </select>
-            <input type="text" id="otherLocation" class="hidden" placeholder="Please specify...">
-            <button onclick="showComments()">Next</button>
-        </div>
+            <div id="choices" class="hidden">
+                <h3>Where would you like to go?</h3>
+                <select id="locationSelect" name="location" onchange="toggleOtherField()">
+                    <option value="Ronac Museum">Ronac Museum</option>
+                    <option value="Rockwell">Rockwell</option>
+                    <option value="San Juan Coffee Shop">San Juan Coffee Shop</option>
+                    <option value="Other">Other</option>
+                </select>
+                <input type="text" id="otherLocation" name="otherLocation" class="hidden" placeholder="Please specify..." />
+                <button type="button" onclick="showComments()">Next</button>
+            </div>
 
-        <div id="comments" class="hidden">
-            <textarea placeholder="Any comments?" rows="4"></textarea>
-            <button id="submitButton" onclick="submitForm()">Submit</button>
-        </div>
+            <div id="comments" class="hidden">
+                <textarea name="comments" placeholder="Any comments?" rows="4"></textarea>
+                <button type="button" id="submitButton" onclick="submitForm()">Submit</button>
+            </div>
 
-        <h2 id="thankYouMessage" class="hidden">Thank you for allowing me to be with you, See You!</h2>
-        <h2 id="sorryMessage" class="hidden">Okay, Still Thank you. Maybe Next Time</h2>
+            <h2 id="thankYouMessage" class="hidden">Thank you for allowing me to be with you, See You!</h2>
+            <h2 id="sorryMessage" class="hidden">Okay, Still Thank you. Maybe Next Time</h2>
+        </form>
     </div>
 
     <script>
@@ -130,29 +134,53 @@
         }
 
         function submitForm() {
+            // Collect form data
             const date = document.getElementById('dateInput').value;
             const locationSelect = document.getElementById('locationSelect').value;
             const otherLocation = document.getElementById('otherLocation').value;
             const finalLocation = locationSelect === 'Other' ? otherLocation : locationSelect;
+
+            // Prepare data for Formspree
             const comments = document.querySelector('textarea').value;
 
-            console.log({ date, location: finalLocation, comments });
+            // Create a FormData object
+            const formData = new FormData();
+            formData.append('date', date);
+            formData.append('location', finalLocation);
+            formData.append('comments', comments);
 
-            // Hide title and form elements, show thank you message
-            document.getElementById('invitationTitle').classList.add('hidden');
-            document.getElementById('dateField').classList.add('hidden');
-            document.getElementById('choices').classList.add('hidden');
-            document.getElementById('comments').classList.add('hidden');
-            document.querySelectorAll('.container button').forEach(btn => btn.classList.add('hidden'));
-            
-            // Show thank you message
-            document.getElementById('thankYouMessage').classList.remove('hidden');
+            // Submit the form using fetch
+            fetch('https://formspree.io/f/xgvojqkw', {
+                method: 'POST',
+                body: formData,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            })
+            .then(response => {
+                if (response.ok) {
+                    // Hide title and form elements, show thank you message
+                    document.getElementById('invitationTitle').classList.add('hidden');
+                    document.getElementById('dateField').classList.add('hidden');
+                    document.getElementById('choices').classList.add('hidden');
+                    document.getElementById('comments').classList.add('hidden');
+                    document.querySelectorAll('.container button').forEach(btn => btn.classList.add('hidden'));
+                    
+                    // Show thank you message
+                    document.getElementById('thankYouMessage').classList.remove('hidden');
+                } else {
+                    alert('There was an error submitting your form. Please try again.');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('There was an error submitting your form. Please try again.');
+            });
         }
 
         function sendEmail(message) {
             console.log(message);
         }
     </script>
-
-
-</body></html>
+</body>
+</html>
