--- a/index.html
+++ b/index.html
@@ -6,73 +6,98 @@
     <title>Coffee Invitation</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #000; /* Black background */
-            color: #fff; /* White text */
+            background-color: #1b1b1b; 
+            margin: 15px;
         }
         .container {
-            max-width: 500px;
+            max-width: 400px;
             width: 100%;
-            background: #ff69b4; /* Pink background */
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.5);
-            text-align: center; /* Center text */
+            background: #ffffff; /* White background */
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+            text-align: center;
         }
         h2 {
             margin-bottom: 20px;
+            color: #333; /* Dark text */
+            font-size: 23px;
         }
         button {
-            display: block;
             width: 100%;
-            padding: 12px;
+            padding: 15px;
             margin: 10px 0;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 16px;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.2s;
         }
         button.yes {
-            background-color: #ff1493; /* Deep pink */
+            background-color: #ff0e32; 
             color: white;
+            font-weight: 800;
+            text-transform: uppercase;
         }
         button.sorry {
-            background-color: #c71585; /* Medium violet red */
+            background-color: #ff4d4d; /* Soft red */
             color: white;
+        }
+        button:hover {
+            transform: translateY(-2px);
+        }
+        button:active {
+            transform: translateY(1px);
         }
         .hidden {
             display: none;
         }
         input[type="date"], select, textarea, input[type="text"] {
-            width: 100%;
-            padding: 10px;
+            width: 92%;
+            padding: 12px;
             margin: 10px 0;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 8px;
             font-size: 16px;
-            background-color: #222; /* Dark background for inputs */
-            color: #fff; /* White text for inputs */
+            background-color: #f9f9f9; /* Light input background */
+            color: #333;
+            transition: border-color 0.3s;
         }
         input[type="date"]:focus, select:focus, textarea:focus, input[type="text"]:focus {
-            border-color: #ff69b4; /* Pink focus border */
+            border-color: #ff6b81; /* Focus border color */
             outline: none;
+        }
+        h3 {
+            margin-bottom: 10px;
+            color: #666; /* Lighter text */
+        }
+        p {
+            font-size: 13px;
+        }
+        img {
+            pointer-events: none;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2 id="invitationTitle">Can we grab some coffee or go outside?</h2>
+        <p id="invitationSub1">Hi Dwayne!</p>
+        <h2 id="invitationTitle">Sip and Share:<br> Coffee Invitation Just for You!</h2>
+        <img class="glow" src="C:\Users\anteo\Downloads\ii-ic.png" width="80">
+        <p id="invitationSub">Invitation from Patrick ⭐</p>
+        <p id="yesButtonSubtitle" style="color: #666;">(Click Yes to Pick a date and Location)</p>
         <form action="https://formspree.io/f/xgvojqkw" method="POST" id="coffeeForm">
             <button type="button" class="yes" onclick="handleYes()">Yes</button>
             <button type="button" class="sorry" id="sorryButton" onclick="handleSorry()">Sorry</button>
 
             <div id="dateField" class="hidden">
+                <h3>Pick a date</h3>
                 <input type="date" id="dateInput" name="date" required>
                 <button type="button" onclick="showChoices()">Next</button>
             </div>
@@ -80,9 +105,10 @@
             <div id="choices" class="hidden">
                 <h3>Where would you like to go?</h3>
                 <select id="locationSelect" name="location" onchange="toggleOtherField()">
-                    <option value="Ronac Museum">Ronac Museum</option>
-                    <option value="Rockwell">Rockwell</option>
-                    <option value="San Juan Coffee Shop">San Juan Coffee Shop</option>
+                    <option value="Ronac Museum">1120 House</option>
+                    <option value="Design Story Shop">Design Story Shop</option>
+                    <option value="A.M Espresso San Juan">A.M Espresso San Juan</option>
+                    <option value="Ronac Art Museum">Ronac Art Museum</option>
                     <option value="Other">Other</option>
                 </select>
                 <input type="text" id="otherLocation" name="otherLocation" class="hidden" placeholder="Please specify..." />
@@ -90,17 +116,19 @@
             </div>
 
             <div id="comments" class="hidden">
-                <textarea name="comments" placeholder="Any comments?" rows="4"></textarea>
+                <textarea name="comments" placeholder="Any Comments/Notes?" rows="4"></textarea>
                 <button type="button" id="submitButton" onclick="submitForm()">Submit</button>
             </div>
 
-            <h2 id="thankYouMessage" class="hidden">Thank you for allowing me to be with you, See You!</h2>
-            <h2 id="sorryMessage" class="hidden">Okay, Still Thank you. Maybe Next Time</h2>
+            <h2 id="thankYouMessage" class="hidden">I’m so glad you’re up for it! Thank you, and can’t wait to see you Dwayne!</h2>
+            <h2 id="sorryMessage" class="hidden">Thanks for your honesty! I appreciate it. Let’s keep in touch for another opportunity. - Pat</h2>
         </form>
     </div>
 
     <script>
         function handleYes() {
+							document.getElementById('yesButtonSubtitle').classList.add('hidden'); // Hide Subtitle
+
             document.querySelector('.yes').classList.add('hidden');
             document.querySelector('.sorry').classList.add('hidden');
             document.getElementById('dateField').classList.remove('hidden');
@@ -127,7 +155,10 @@
             .then(response => {
                 if (response.ok) {
                     console.log('Notification email sent successfully.');
+					document.getElementById('yesButtonSubtitle').classList.add('hidden'); // Hide Subtitle
                     document.getElementById('invitationTitle').classList.add('hidden'); // Hide title
+                    document.getElementById('invitationSub').classList.add('hidden'); // Hide Subtitle
+                    document.getElementById('invitationSub1').classList.add('hidden'); // Hide Subtitle
                     document.querySelectorAll('.container button').forEach(btn => btn.classList.add('hidden')); // Hide all buttons
                     document.getElementById('sorryMessage').classList.remove('hidden'); // Show sorry message
                 } else {
@@ -140,11 +171,13 @@
         }
 
         function showChoices() {
+		
             document.getElementById('choices').classList.remove('hidden');
             document.getElementById('dateField').classList.add('hidden');
         }
 
         function toggleOtherField() {
+		
             const select = document.getElementById('locationSelect');
             const otherField = document.getElementById('otherLocation');
             otherField.classList.toggle('hidden', select.value !== 'Other');
@@ -182,6 +215,8 @@
             .then(response => {
                 if (response.ok) {
                     // Hide title and form elements, show thank you message
+					  document.getElementById('yesButtonSubtitle').classList.add('hidden'); // Hide Subtitle
+                    document.getElementById('invitationSub1').classList.add('hidden'); // Hide Subtitle
                     document.getElementById('invitationTitle').classList.add('hidden');
                     document.getElementById('dateField').classList.add('hidden');
                     document.getElementById('choices').classList.add('hidden');
