--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="container">
         <p id="invitationSub1">Hi Dwayne!</p>
         <h2 id="invitationTitle">Sip and Share:<br> Coffee Invitation Just for You!</h2>
-        <img class="glow" src="C:\Users\anteo\Downloads\ii-ic.png" width="80">
+        <img class="glow" src="ii-ic.png" width="80">
         <p id="invitationSub">Invitation from Patrick ⭐</p>
         <p id="yesButtonSubtitle" style="color: #666;">(Click Yes to Pick a date and Location)</p>
         <form action="https://formspree.io/f/xgvojqkw" method="POST" id="coffeeForm">
