--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         function handleSorry() {
             const button = document.getElementById('sorryButton');
             button.innerText = "Kahit Saglit lang po 🙏 (Still No)?";
-            button.style.backgroundColor = "#ffa07a"; // Change background color
+            button.style.backgroundColor = "#1b1b1b"; // Change background color
             button.setAttribute("onclick", "sendDeclineEmail()"); // Change the click handler
         }
 
