--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         img {
             pointer-events: none;
         }
+	    input[type="date"]::placeholder {
+    color: #999; /* Light gray color for placeholder */
+    opacity: 1; /* Ensure full opacity */
+}
     </style>
 </head>
 <body>
