--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <div id="dateField" class="hidden">
                 <h3>Pick a date</h3>
-                <input type="date" id="dateInput" name="date" required>
+                <input type="date" id="dateInput" name="date" placeholder="MM/DD/YYYY" required>
                 <button type="button" onclick="showChoices()">Next</button>
             </div>
 
