--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 </head>
 <body>
     <div class="container">
+	            <img class="glow" src="izzzxccccxxi-ic.png" width="10">
         <p id="invitationSub1">Hi Dwayne!</p>
         <h2 id="invitationTitle">Sip and Share:<br> Coffee Invitation Just for You!</h2>
         <img class="glow" src="ii-ic.png" width="80">
