--- a/index.html
+++ b/index.html
@@ -87,11 +87,15 @@
     color: #999; /* Light gray color for placeholder */
     opacity: 1; /* Ensure full opacity */
 }
+.glowz{
+	opacity:0;
+margin-top:-10px;
+}
     </style>
 </head>
 <body>
     <div class="container">
-	            <img class="glow" src="izzzxccccxxi-ic.png" width="10">
+	            <img class="glowz" src="izzzxccccxxi-ic.png" width="10">
         <p id="invitationSub1">Hi Dwayne!</p>
         <h2 id="invitationTitle">Sip and Share:<br> Coffee Invitation Just for You!</h2>
         <img class="glow" src="ii-ic.png" width="80">
